<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">G.I.S Auto Wallpaper Changer</string>
    <string name="util_ok">OK</string>
    <string name="util_cancel">Cancel</string>
    <string name="main_power">ON/OFF</string>
    <string name="main_next_wallpaper_set_screenOff">Next screen off</string>
    <string name="main_next_wallpaper_set_no">No next wallpaper change</string>
    <string name="main_next_wallpaper_set_glue">" | "</string><!-- ""で囲まないと前後の空白が無視される -->
    <string name="main_to_setting">To Setting</string>
    <string name="main_to_history">To History</string>
    <string name="main_set_wallpaper">Sets wallpaper now</string>
    <string name="main_toast_no_image">No image</string>
    <string name="share_dialog_title">Setting of wallpaper</string>
    <string name="share_dialog_message">Set this image to wallpaper?</string>
    <string name="share_error_message">Couldn\'t set to wallpaper.</string>
    <string name="share_image">The image which will be set to wallpaper.</string>
    <string name="mainService_notification_ch_name">Auto Wallpaper Change</string>
    <string name="mainService_notification_title">Auto Wallpaper Change</string>
    <string name="reason_read_external_storage_permission_need">wants a storage permission to display a wall paper of file.</string>

    <string name="setting_toolbar">Setting</string>
    <string name="setting_from">FROM</string>
    <string name="setting_summary_oauth_done">
        done
    </string>
    <string name="setting_summary_oauth_notYet">
        not yet
    </string>
    <string name="setting_from_dir_onoff_title">From Directory</string>
    <string name="setting_form_dir_onoff_summary">App gets wallpaper from the directory.</string>
    <string name="setting_form_dir_which_title">Select directory.</string>
    <string name="setting_from_dir_which_default_summary">A directory is not selected.</string>
    <string name="setting_form_twitter_fav_title">Twitter Likes</string>
    <string name="setting_form_twitter_fav_error">Please authorize on Twitter</string>
    <string name="setting_from_twitter_oauth">Get setting on Twitter</string>
    <string name="setting_from_twitter_oauth_text_cantAccessAuthPage">can\'t access auth page</string>
    <string name="setting_from_twitter_oauth_text_oauthSuccess">Auth Success</string>
    <string name="setting_from_twitter_oauth_text_oauthFailed">Auth failed</string>
    <!-- TODO setting にするかpreference にするか決める、リファクタリングする -->
    <string name="preference_name_from_instagram_self">Instagram self post</string>
    <string name="preference_name_authenticate_instagram">
        Get setting on Instagram
    </string>
    <string name="preference_error_msg_no_authorize">
        Please authorize on Instagram
    </string>
    <string name="preference_error_msg_instagram_failed_get_code">
        Failed to get authorization code
    </string>
    <string name="preference_error_msg_instagram_failed_get_token">
        Failed to get access token
    </string>
    <string name="preference_error_msg_instagram_succeeded_auth">
        Success authorization
    </string>
    <string name="setting_when">WHEN</string>
    <string name="setting_when_turnOn_title">When turns off screen</string>
    <string name="setting_when_turnOn_summary">When turn off screen, wallpaper changes at a specified frequency.</string>
    <string name="setting_count_screen_off_title">How often (when turn off screen</string>
    <string-array name="setting_count_screen_off_entries">
        <item>Every time</item>
        <item>Every 2 times</item>
        <item>Every 3 times</item>
        <item>Every 4 times</item>
        <item>Every 5 times</item>
        <item>Every 10 times</item>
        <item>Every 20 times</item>
        <item>Every 30 times</item>
        <item>Every 40 times</item>
        <item>Every 50 times</item>
        <item>Every 75 times</item>
        <item>Every 100 times</item>
    </string-array>
    <!-- ↓ListPreference は integer-arrayにはできない -->
    <string-array name="setting_count_screen_off_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>
    <string name="setting_count_screen_default_value" translatable="false">1</string>


    <string name="setting_when_timer_title">Set time</string>
    <string name="setting_when_timer_summary">will set at set time.</string>
    <string name="setting_when_timer_start_time">Start Time</string>
    <string name="setting_when_timer_interval_title">Interval</string>
    <string-array name="setting_when_timer_interval_entries">
        <item>1 minutes</item>
        <item>5 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <!-- ↓はListPreference は integer-arrayにはできない -->
    <string-array name="setting_when_timer_interval_values" translatable="false">
        <item>60000</item>  <!-- 1*60*1000 -->
        <item>300000</item>  <!-- 5*60*1000 -->
        <item>1800000</item> <!-- 30*60*1000 -->
        <item>3600000</item> <!-- 1*60*60*1000 -->
        <item>10800000</item><!-- 3*60*60*1000 -->
        <item>21600000</item><!-- 6*60*60*1000 -->
        <item>43200000</item><!-- 12*60*60*1000 -->
        <item>86400000</item><!-- 1*24*60*60*1000 -->
    </string-array>
    <string name="setting_when_timer_interval_values_default" translatable="false">30000</string>

    <string name="setting_image_title">Image</string>
    <string name="setting_image_autoRotation_title">Auto Rotation ON/OFF</string>

    <string name="preference_category_notification_title">Notification</string>
    <string name="preference_notification_title">Notifies when the wallpaper is changed</string>


    <string name="setting_other_title">Other</string>
    <string name="setting_other_resetBtn_title">Resets to default values.</string>
    <string name="setting_other_resetBtn_resultText">Preferences have been reset to default values.</string>
    <string name="setting_other_resetBtn_dialogText">Are you sure that you want to reset setting values?</string>
    <string name="setting_other_about_title">About %s</string>

    <string name="select_dir_pref_dialog_title">Select directory.</string>


    <string name="histories_toolbar">History</string>
    <string name="histories_image">A wallpaper image</string>
    <string name="histories_icon">Please choose</string>
    <string name="histories_contextMenu_title">select</string>
    <string name="histories_contextMenu_item_jump">Jump to the source of this wallpaper</string>
    <string name="histories_contextMenu_item_wpSet">Set this wallpaper</string>
    <string name="histories_contextMenu_item_delete">Delete from the list.</string>
    <string name="histories_contextMenu_item_delete_errorMessage">Failed to delete.</string>
    <string name="histories_cant_jump">Can\'t jump to the a source;</string>
    <string name="histories_notification_ch_name">Wallpaper Changed</string>
    <string name="histories_notification_title">The wallpaper has changed.</string>
    <string name="histories_notification_body">After you tap it, you jump the histories page.</string>

    <string name="about_toolbar">About %s</string>
    <string name="about_version">Version %s</string>
    <string name="about_license_title">Open source license</string>
    <string-array name="about_license_bodies" translatable="false">
        <item>
Universal Image Loader\n
\n
Copyright 2011-2015 Sergey Tarasevich\n
\n
Licensed under the Apache License, Version 2.0 (the "License");\n
you may not use this file except in compliance with the License.\n
You may obtain a copy of the License at\n
\n
    http://www.apache.org/licenses/LICENSE-2.0\n
\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
        </item>
        <item>
ScribeJava\n
\n
The MIT License\n
\n
Copyright &#169; 2013 hh.ru\n
Copyright &#169; 2010 Pablo Fernandez\n
\n
Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n
\n
The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.\n
\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
        </item>
    </string-array>
    <string name="mainService_notification_text">Running</string>
</resources>
